removed nav bar

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
 <body>
 
-  <div id="mySidenav" class="sidenav">
+  <!-- <div id="mySidenav" class="sidenav">
       <a id="main-navbar" href="#">Resume</a>
     <a id="programming" href="#">Programming</a>
     <a id="side-projects" href="#">Side Projects</a>
-    <!-- <a id="work-experience" href="#">Work Experience</a> -->
-  </div>
+    <a id="work-experience" href="#">Work Experience</a>
+  </div> -->
 
   <div class="container preface text-center">
-    <h2>Preface</h2>
+    <h2>──────── Preface ────────</h2>
     <p>Hi, my name is Quang-Tri and I am a student at the University of Ottawa studying Software Engineering. I am an experienced
       Java programmer with knowledge in both Python and C++. I have a strong desire to improve my programming and motivated
       to learn as much as I can.
@@ -31,7 +31,7 @@
   <div class="parallax" id="first"></div>
 
   <div class="container programming">
-    <h2>Programming</h2>
+    <h2>──────── Programming ────────</h2>
     <ul>
       <li>Efficient coding ability in Java and Python as well as good knowledge of C++, HTML/CSS, and Javascript/Jquery</li>
       <li>Java: 3 years of programming experience including work experience. Knowledgeable in concepts and applications of classes,
@@ -43,7 +43,7 @@
   </div>
 
   <div class="container side-projects">
-    <h2>Side Projects</h2>
+    <h2>──────── Side Projects ────────</h2>
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-5">
