added work experience

--- a/index.html
+++ b/index.html
@@ -42,6 +42,40 @@
     </ul>
   </div>
 
+  <div class="container work-experience">
+    <h2>──────── Work Experience ────────</h2>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <div class="job-name"> 
+          <h3>Canada Revenue Agency</h3>
+          <h4>Java Developer, Winter 2017</h4>
+        </div>
+        <p>
+          My team worked on a java application that was used primarily by auditors. I developed patches
+          and maintained the application during my time there. I also wrote acceptance tests using the
+          FitNesse framework.
+        </p>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="space"></div>
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div class="job-name"> 
+            <h3>Shared Services Canada</h3>
+            <h4>IT Specialist, Summer 2016</h4>
+          </div>
+          <p>
+            Monitored Linux virtual machines and wrote procedural documentation. I also performed
+            a proof of concept for a new software designed to perform updates on many virtual machines.
+          </p>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+  </div>
+
   <div class="container side-projects">
     <h2>──────── Side Projects ────────</h2>
     <div class="row">
