--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
   <title>Resume</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="mycss.css">
-  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w"
-    crossorigin="anonymous">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
 <body>
 
+  <div class="navbar">
+    <ul class="navbar-list">
+      <li class="navbar-item">Resume</li>
+      <li class="navbar-item" id="programming">Programming</li>
+      <li class="navbar-item" id="work-experience">Work Experience</li>
+      <li class="navbar-item" id="side-projects">Side Projects</li>
+    </ul>
+  </div>
+
   <div class="container preface text-center">
-    <h2>──────── Preface ────────</h2>
+    <h2>─── Preface ───</h2>
     <p>Hi, my name is Quang-Tri and I am a student at the University of Ottawa studying Software Engineering. I am an experienced
       Java programmer with knowledge in both Python and C++. I have a strong desire to improve my programming and motivated
       to learn as much as I can.
     </p>
   </div>
 
-  <div class="parallax" id="first"></div>
-
-  <div class="container programming">
-    <h2>──────── Programming ────────</h2>
+  <div class="container programming card">
+    <h2>─── Programming ───</h2>
     <ul>
       <li>Efficient coding ability in Java and Python as well as good knowledge of C++, HTML/CSS, and Javascript/Jquery</li>
       <li>Java: 3 years of programming experience including work experience. Knowledgeable in concepts and applications of classes,
@@ -35,14 +39,14 @@
     </ul>
   </div>
 
-  <div class="container work-experience">
-    <h2>──────── Work Experience ────────</h2>
+  <div class="container work-experience card">
+    <h2>─── Work Experience ───</h2>
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <div class="job-name"> 
           <h3>Canada Revenue Agency</h3>
-          <h4>Java Developer, Winter 2017</h4>
+          <h4>Java Developer, January - April 2017</h4>
         </div>
         <p>
           My team worked on a java application that was used primarily by auditors. I developed patches
@@ -58,7 +62,7 @@
         <div class="col-md-8">
           <div class="job-name"> 
             <h3>Shared Services Canada</h3>
-            <h4>IT Specialist, Summer 2016</h4>
+            <h4>IT Specialist, May - August 2016</h4>
           </div>
           <p>
             Monitored Linux virtual machines and wrote procedural documentation. I also performed
@@ -69,8 +73,8 @@
       </div>
   </div>
 
-  <div class="container side-projects">
-    <h2>──────── Side Projects ────────</h2>
+  <div class="container side-projects card">
+    <h2>─── Side Projects ───</h2>
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-5">
