--- a/index.html
+++ b/index.html
@@ -12,31 +12,33 @@
 
   <div class="navbar">
     <ul class="navbar-list">
-      <li class="navbar-item">Resume</li>
-      <li class="navbar-item" id="programming">Programming</li>
+      <li class="navbar-item" id="programming">About</li>
       <li class="navbar-item" id="work-experience">Work Experience</li>
       <li class="navbar-item" id="side-projects">Side Projects</li>
     </ul>
   </div>
 
   <div class="container preface text-center">
-    <h2>─── Preface ───</h2>
-    <p>Hi, my name is Quang-Tri and I am a student at the University of Ottawa studying Software Engineering. I am an experienced
-      Java programmer with knowledge in both Python and C++. I have a strong desire to improve my programming and motivated
-      to learn as much as I can.
+    <p>Hi, my name is Quang-Tri<br>
+      Welcome to my website<span class="blinking-cursor">|</span>
     </p>
   </div>
 
-  <div class="container programming card">
-    <h2>─── Programming ───</h2>
-    <ul>
-      <li>Efficient coding ability in Java and Python as well as good knowledge of C++, HTML/CSS, and Javascript/Jquery</li>
-      <li>Java: 3 years of programming experience including work experience. Knowledgeable in concepts and applications of classes,
-        inheritance and objects</li>
-      <li>Working understanding of the MVC software pattern</li>
-      <li>Critical thinking and problem solving when planning a program</li>
-      <li>Ability to analyze an algorithm's O-notation / complexity</li>
-    </ul>
+  <div class="container about card">
+    <h2>─── About ───</h2>
+    <p>I am a fourth year software engineering student with a passion in web design and programming. I specialize in Java applications, with
+    knowledge in Python and C++.</p>
+    <br>
+    <p>I like working on personal projects in my free time, or taking online courses to learn about new things. Currently working through
+      a udemy course on Angular 6.
+    </p>
+    <br>
+    <br>
+    <div class="socials">
+      <a href="mailto:qtrido@gmail.com"><img src="images/gmail.png"></a>
+      <a href="https://github.com/roswellt"><img src="images/github.png"></a>
+      <a href="https://ca.linkedin.com/in/qtrido"><img src="images/linkedin.png"></a>
+    </div>
   </div>
 
   <div class="container work-experience card">
