--- a/index.html
+++ b/index.html
@@ -93,10 +93,9 @@
       <div class="col-md-5">
         <div class="image-wrapper">
           <img class="center-block" src="images/bustexter.png" />
-          <div class="center-block image-caption">
+          <div class="center-block image-caption" data-toggle="modal" data-target="#bustexter-modal">
             <div class="center-block project-title">
               <p>Bus Texter</p>
-              <p class="caption-button" data-toggle="modal" data-target="#bustexter-modal">Info</p>
             </div>
           </div>
         </div>
@@ -104,10 +103,9 @@
       <div class="col-md-5">
         <div class="image-wrapper">
           <img class="center-block" src="images/Automify.png" />
-          <div class="center-block image-caption">
+          <div class="center-block image-caption" data-toggle="modal" data-target="#automify-modal">
             <div class="center-block project-title">
               <p>Automify</p>
-              <p class="caption-button" data-toggle="modal" data-target="#automify-modal">Info</p>
             </div>
           </div>
         </div>
@@ -128,14 +126,14 @@
         </div>
         <div class="modal-body">
           <p>A python tool that texts which bus number and route to take to get from location to destination to your mobile
-            number.
-          </p>
-          <p>Built using the GMail and Google maps API. The Google maps API is used to get a bus route from location to destination,
-            which is then formatted into a readable output</p>
-          <p>The GMail API receives incoming mobile texts with location and destination specified, and then sends the Google
-            maps results through an email which is sent as a mobile text</p>
-          <div>
-            <img class="modal-image" src="images/bustexter-modal.png" />
+            number.</p> 
+            <p>Originally made to avoid getting lost while on a phone plan without data, since emails can be sent via text message. 
+              So no internet connection is needed on the user side</p>
+          <div class="project-skills">
+            <!-- <img class="modal-image" src="images/bustexter-modal.png" /> -->
+            <span class="project-skill">Python</span>
+            <span class="project-skill">Gmail API</span>
+            <span class="project-skill">Gmaps API</span>
           </div>
         </div>
       </div>
@@ -153,14 +151,15 @@
           <h4 class="modal-title">Automify</h4>
         </div>
         <div class="modal-body">
-          <p>Developed with a group of friends during the future of work hackathon. A hackathon that focuses on the future automation
+          <p>Developed with a group of friends during the <a href="https://futureofwork.ca/">future of work hackathon</a>. 
+            A hackathon that focuses on the future automation
             of work by artificial intelligence and automation.</p>
-          <p>Our project was designed to give prospective job seekers a way to easily identify the likelihood of a job being
-            automated during their job search.</p>
           <p>A chrome extension that displays the likelihood of automation of a job posting on the Indeed search engine. The
-            data was taken from a dataset that was made available by the hackathon. Built using HTML, CSS, and JavaScript.</p>
-          <div>
-            <img class="modal-image" src="images/automify-modal.png" />
+            data was taken from a dataset that was made available by the hackathon.</p>
+          <div class="project-skills">
+            <span class="project-skill">HTML5</span>
+            <span class="project-skill">CSS3</span>
+            <span class="project-skill">Javascript</span>
           </div>
         </div>
       </div>
