--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <div class="navbar">
     <ul class="navbar-list">
       <li class="navbar-item" id="about">About</li>
+      <li class="navbar-item">|</li>
       <li class="navbar-item" id="work-experience">Work Experience</li>
+      <li class="navbar-item">|</li>
       <li class="navbar-item" id="side-projects">Side Projects</li>
     </ul>
   </div>
@@ -34,16 +36,16 @@
         <br>
         <br>
         <div class="socials">
-          <a href="mailto:qtrido@gmail.com"><img src="images/gmail.png"></a>
-          <a href="https://github.com/roswellt"><img src="images/github.png"></a>
-          <a href="https://ca.linkedin.com/in/qtrido"><img src="images/linkedin.png"></a>
+          <a class="pop-up" href="mailto:qtrido@gmail.com"><img class="pop-up" src="images/gmail.png"></a>
+          <a href="https://github.com/roswellt"><img class="pop-up" src="images/github.png"></a>
+          <a href="https://ca.linkedin.com/in/qtrido"><img class="pop-up" src="images/linkedin.png"></a>
         </div>
       </div>
   </div>
 
   <div class="container work-experience card">
     <h2>─── Work Experience ───</h2>
-    <div class="row">
+    <div class="row job">
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <div class="job-name">
@@ -54,7 +56,7 @@
           Triaged test failures, reported issues and created JIRAs to track critical issues.</p>
       </div>
     </div>
-    <div class="row">
+    <div class="row job">
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <div class="job-name"> 
@@ -69,8 +71,7 @@
       </div>
       <div class="col-md-2"></div>
     </div>
-    <div class="space"></div>
-    <div class="row">
+    <div class="row job">
         <div class="col-md-2"></div>
         <div class="col-md-8">
           <div class="job-name"> 
@@ -87,7 +88,7 @@
   </div>
 
   <div class="container side-projects card">
-    <h2>─── Side Projects ───</h2>
+    <h2>─── Projects ───</h2>
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-5">
@@ -127,13 +128,13 @@
         <div class="modal-body">
           <p>A python tool that texts which bus number and route to take to get from location to destination to your mobile
             number.</p> 
-            <p>Originally made to avoid getting lost while on a phone plan without data, since emails can be sent via text message. 
-              So no internet connection is needed on the user side</p>
+            <p>Originally made to avoid getting lost while on a phone plan without data. Since emails can be sent via text message, 
+              no internet connection is needed on the user side</p>
           <div class="project-skills">
             <!-- <img class="modal-image" src="images/bustexter-modal.png" /> -->
-            <span class="project-skill">Python</span>
-            <span class="project-skill">Gmail API</span>
-            <span class="project-skill">Gmaps API</span>
+            <span class="project-skill card-two">Python</span>
+            <span class="project-skill card-two">Gmail API</span>
+            <span class="project-skill card-two">Gmaps API</span>
           </div>
         </div>
       </div>
@@ -157,9 +158,9 @@
           <p>A chrome extension that displays the likelihood of automation of a job posting on the Indeed search engine. The
             data was taken from a dataset that was made available by the hackathon.</p>
           <div class="project-skills">
-            <span class="project-skill">HTML5</span>
-            <span class="project-skill">CSS3</span>
-            <span class="project-skill">Javascript</span>
+            <span class="project-skill card-two">HTML5</span>
+            <span class="project-skill card-two">CSS3</span>
+            <span class="project-skill card-two">Javascript</span>
           </div>
         </div>
       </div>
