--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </p>
   </div>
   <div class="outer-container about">
-      <div class="container about card">
-        <h2>─── About ───</h2>
+      <div class="container">
+        <h2>About</h2>
         <p>I am a fourth year software engineering student with a passion in web design and programming. I specialize in Java applications, with
         knowledge in Python and C++.</p>
         <br>
@@ -46,11 +46,11 @@
   <div class="container work-experience card">
     <h2>─── Work Experience ───</h2>
     <div class="row job">
-      <div class="col-md-2"></div>
+      <div class="div col-md-2"></div>
       <div class="col-md-8">
         <div class="job-name">
           <h3>Ford Motor Company</h3>
-          <h4>Test Automation Developer</h4>
+          <h4>Test Automation Developer, May - August 2018</h4>
         </div>
         <p>Tested and modified scripts that tested Ford's latest infotainment system.
           Triaged test failures, reported issues and created JIRAs to track critical issues.</p>
@@ -120,9 +120,6 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
           <h4 class="modal-title">Bus Texter</h4>
         </div>
         <div class="modal-body">
@@ -146,9 +143,6 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
           <h4 class="modal-title">Automify</h4>
         </div>
         <div class="modal-body">
@@ -162,7 +156,7 @@
             <span class="project-skill card-two">CSS3</span>
             <span class="project-skill card-two">Javascript</span>
           </div>
-        </div>
+        </di
       </div>
     </div>
   </div>
