added images to work-experience

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       Welcome to my website<span class="blinking-cursor">|</span>
     </p>
   </div>
-  <div class="outer-container about">
-      <div class="container">
+  <div class="outer-container grey">
+      <div class="container about">
         <h2>About</h2>
         <p>I am a fourth year software engineering student with a passion in web design and programming. I specialize in Java applications, with
         knowledge in Python and C++.</p>
@@ -43,10 +43,12 @@
       </div>
   </div>
 
-  <div class="container work-experience card">
+  <div class="container work-experience">
     <h2>─── Work Experience ───</h2>
     <div class="row job">
-      <div class="div col-md-2"></div>
+      <div class="div col-md-2">
+        <img src="images/Ford_logo.jpg">
+      </div>
       <div class="col-md-8">
         <div class="job-name">
           <h3>Ford Motor Company</h3>
@@ -57,7 +59,9 @@
       </div>
     </div>
     <div class="row job">
-      <div class="col-md-2"></div>
+      <div class="col-md-2">
+        <img src="images/cra-logo.jpg">
+      </div>
       <div class="col-md-8">
         <div class="job-name"> 
           <h3>Canada Revenue Agency</h3>
@@ -72,7 +76,9 @@
       <div class="col-md-2"></div>
     </div>
     <div class="row job">
-        <div class="col-md-2"></div>
+        <div class="col-md-2">
+          <img src="images/ssc-logo.jpg">
+        </div>
         <div class="col-md-8">
           <div class="job-name"> 
             <h3>Shared Services Canada</h3>
@@ -87,31 +93,33 @@
       </div>
   </div>
 
-  <div class="container side-projects card">
-    <h2>─── Projects ───</h2>
-    <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-5">
-        <div class="image-wrapper">
-          <img class="center-block" src="images/bustexter.png" />
-          <div class="center-block image-caption" data-toggle="modal" data-target="#bustexter-modal">
-            <div class="center-block project-title">
-              <p>Bus Texter</p>
+  <div class="outer-container">
+    <div class="container side-projects grey">
+      <h2>─── Projects ───</h2>
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-5">
+          <div class="image-wrapper">
+            <img class="center-block" src="images/bustexter.png" />
+            <div class="center-block image-caption" data-toggle="modal" data-target="#bustexter-modal">
+              <div class="center-block project-title">
+                <p>Bus Texter</p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-5">
-        <div class="image-wrapper">
-          <img class="center-block" src="images/Automify.png" />
-          <div class="center-block image-caption" data-toggle="modal" data-target="#automify-modal">
-            <div class="center-block project-title">
-              <p>Automify</p>
+        <div class="col-md-5">
+          <div class="image-wrapper">
+            <img class="center-block" src="images/Automify.png" />
+            <div class="center-block image-caption" data-toggle="modal" data-target="#automify-modal">
+              <div class="center-block project-title">
+                <p>Automify</p>
+              </div>
             </div>
           </div>
         </div>
+        <div class="col-md-1"></div>
       </div>
-      <div class="col-md-1"></div>
     </div>
   </div>
 
