--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li class="navbar-item">|</li>
       <li class="navbar-item" id="work-experience">Work Experience</li>
       <li class="navbar-item">|</li>
-      <li class="navbar-item" id="side-projects">Side Projects</li>
+      <li class="navbar-item" id="side-projects">Projects</li>
     </ul>
   </div>
 
@@ -33,13 +33,6 @@
         <p>I like working on personal projects in my free time, or taking online courses to learn about new things. Currently working through
           a udemy course on Angular 6.
         </p>
-        <br>
-        <br>
-        <div class="socials">
-          <a class="pop-up" href="mailto:qtrido@gmail.com"><img class="pop-up" src="images/gmail.png"></a>
-          <a href="https://github.com/roswellt"><img class="pop-up" src="images/github.png"></a>
-          <a href="https://ca.linkedin.com/in/qtrido"><img class="pop-up" src="images/linkedin.png"></a>
-        </div>
       </div>
   </div>
 
@@ -93,7 +86,7 @@
       </div>
   </div>
 
-  <div class="outer-container">
+  <div class="outer-container no-margin">
     <div class="container side-projects grey">
       <h2>─── Projects ───</h2>
       <div class="row">
@@ -164,8 +157,15 @@
             <span class="project-skill card-two">CSS3</span>
             <span class="project-skill card-two">Javascript</span>
           </div>
-        </di
+        </div>
       </div>
+    </div>
+  </div>
+  <div class="div socials-container">
+    <div class="socials">
+      <a class="pop-up" href="mailto:qtrido@gmail.com"><img class="pop-up" src="images/gmail.png"></a>
+      <a href="https://github.com/roswellt"><img class="pop-up" src="images/github.png"></a>
+      <a href="https://ca.linkedin.com/in/qtrido"><img class="pop-up" src="images/linkedin.png"></a>
     </div>
   </div>
 
