--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       Welcome to my website<span class="blinking-cursor">|</span>
     </p>
   </div>
-  <div class="outer-container grey">
+  <div class="outer-container">
       <div class="container about">
         <h2>About</h2>
         <p>I am a fourth year software engineering student with a passion in web design and programming. I specialize in Java applications, with
@@ -37,9 +37,11 @@
   </div>
 
   <div class="container work-experience">
-    <h2>─── Work Experience ───</h2>
+    <div class="center-wrap">
+      <h2>Work Experience</h2>
+    </div>
     <div class="row job">
-      <div class="div col-md-2">
+      <div class="col-md-2">
         <img src="images/Ford_logo.jpg">
       </div>
       <div class="col-md-8">
@@ -87,8 +89,10 @@
   </div>
 
   <div class="outer-container no-margin">
-    <div class="container side-projects grey">
-      <h2>─── Projects ───</h2>
+    <div class="container side-projects">
+      <div class="center-wrap">
+        <h2>Projects</h2>
+      </div>
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-5">
@@ -161,7 +165,7 @@
       </div>
     </div>
   </div>
-  <div class="div socials-container">
+  <div class="socials-container">
     <div class="socials">
       <a class="pop-up" href="mailto:qtrido@gmail.com"><img class="pop-up" src="images/gmail.png"></a>
       <a href="https://github.com/roswellt"><img class="pop-up" src="images/github.png"></a>
