fixed mobile centering

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="navbar">
-    <ul class="navbar-list">
+    <ul class="navbar-list center-wrap">
       <li class="navbar-item" id="about">About</li>
       <li class="navbar-item">|</li>
       <li class="navbar-item" id="work-experience">Work Experience</li>
