--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
   </div>
 
-  <div class="outer-container no-margin">
+  <div class="outer-container">
     <div class="container side-projects">
       <div class="center-wrap">
         <h2>Projects</h2>
