--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
   </div>
 
   <div class="container preface text-center">
-    <p>Hi, my name is Quang-Tri<br>
-      Welcome to my website<span class="blinking-cursor">|</span>
-    </p>
+    <div class="preface-text">
+      <p class="type-first">Hi, my name is Quang-Tri<br></p>
+      <p class="type-second">Welcome to my website<span class="blinking-cursor">|</span></p>
+    </div>
   </div>
   <div class="outer-container">
       <div class="container about">
