--- a/index.html
+++ b/index.html
@@ -2,22 +2,31 @@
 <html>
 <head>
   <title>Resume</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="mycss.css">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
-  <div class="navbar">
-    <ul class="navbar-list center-wrap">
-      <li class="navbar-item" id="about">About</li>
-      <li class="navbar-item">|</li>
-      <li class="navbar-item" id="work-experience">Work Experience</li>
-      <li class="navbar-item">|</li>
-      <li class="navbar-item" id="side-projects">Projects</li>
-    </ul>
-  </div>
+  <nav class="navbar navbar-expand-md navbar-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse navbar-default" id="navbarTogglerDemo01">
+      <ul class="navbar-list center-wrap">
+        <li class="navbar-item" id="about">About
+          <span class="navbar-separator">|</span>
+        </li>
+        <li class="navbar-item" id="work-experience">Work Experience
+          <span class="navbar-separator">|</span>
+        </li>
+        <li class="navbar-item" id="side-projects">Projects
+          <span class="navbar-separator">|</span>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <div class="container preface text-center">
     <div class="preface-text">
@@ -178,7 +187,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
   <script type="text/javascript" src="index.js"></script>
 
