modal fades on click

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <!-- Automify Modal -->
   <div class="modal fade" id="automify-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
+      <div class="modal-content" data-dismiss="modal">
         <div class="modal-header">
           <h4 class="modal-title">Automify</h4>
         </div>
