modal closes on click

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <!-- Bus texter Modal -->
   <div class="modal fade" id="bustexter-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
+      <div class="modal-content" data-dismiss="modal">
         <div class="modal-header">
           <h4 class="modal-title">Bus Texter</h4>
         </div>
