--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
   <title>Resume</title>
+  <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="mycss.css">
+  <!-- CSS -->
+  <link rel="stylesheet" type="text/css" href="resume_css.css">
+  <!-- Materialize CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <!-- Web fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -28,22 +34,38 @@
     </div>
   </nav>
 
-  <div class="container preface text-center">
-    <div class="preface-text">
-      <p class="type-first">Hi, my name is Quang-Tri<br></p>
-      <p class="type-second">Welcome to my website<span class="blinking-cursor">|</span></p>
+  <div class="preface-container">
+    <div class="container preface text-center">
+      <p class="type-first">Hi. I'm Quang-Tri<span class="blinking-cursor">|</span></p>
     </div>
-  </div>
-  <div class="outer-container">
-      <div class="container about">
+    <div class="row about">
+      <div class="col-md-6 about">
         <h2>About</h2>
-        <p>I am a fourth year software engineering student with a passion in web design and programming. I specialize in Java applications, with
-        knowledge in Python and C++.</p>
-        <br>
-        <p>I like working on personal projects in my free time, or taking online courses to learn about new things. Currently working through
-          a udemy course on Angular 6.
+        <p>I am a fourth year Software Engineering student at the University of Ottawa. I have a passion for web design and programming.</p>
+        <p class="read-more">I like working on personal projects in my free time, or taking online courses to learn about new things. 
+          Apart from coding, I enjoy playing video games, watching Masterchef, cooking, and playing chess.
         </p>
+        <p class="read-more">My greatest accomplishment is my elementary school's chess championship trophy</p>
+        <a class="waves-effect custom-color-1 btn-small read-more-btn">VIEW MORE</a>
       </div>
+      <div class="col-md-6 contacts">
+        <h4>Contact</h4>
+        <ul>
+          <li>
+            <ion-icon name="mail" class="contacts-icon"></ion-icon>
+            <span class="contacts-info">qtrido@gmail.com</span>
+          </li>
+          <li>
+            <ion-icon name="logo-github" class="contacts-icon"></ion-icon>
+            <span class="contacts-info">Roswellt</span>
+          </li>
+          <li>
+            <ion-icon name="logo-linkedin" class="contacts-icon"></ion-icon>
+            <span class="contacts-info">@qtrido</span>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 
   <div class="container work-experience">
@@ -175,21 +197,22 @@
       </div>
     </div>
   </div>
-  <div class="socials-container">
+  <!-- <div class="socials-container">
     <div class="socials">
       <a class="pop-up" href="mailto:qtrido@gmail.com"><img class="pop-up" src="images/gmail.png"></a>
       <a href="https://github.com/roswellt"><img class="pop-up" src="images/github.png"></a>
       <a href="https://ca.linkedin.com/in/qtrido"><img class="pop-up" src="images/linkedin.png"></a>
     </div>
-  </div>
+  </div> -->
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+  <!-- Ionic Framework -->
+  <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
   <!-- Latest compiled JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+  <!-- Javascript -->
   <script type="text/javascript" src="index.js"></script>
 
 </body>
