--- a/index.html
+++ b/index.html
@@ -15,26 +15,7 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-md navbar-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse navbar-default" id="navbarTogglerDemo01">
-      <ul class="navbar-list center-wrap">
-        <li class="navbar-item" id="about">About
-          <span class="navbar-separator">|</span>
-        </li>
-        <li class="navbar-item" id="work-experience">Work Experience
-          <span class="navbar-separator">|</span>
-        </li>
-        <li class="navbar-item" id="side-projects">Projects
-          <span class="navbar-separator">|</span>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <div class="preface-container">
+  <div class="preface-container section scrollspy" id="introduction">
     <div class="container preface text-center">
       <p class="type-first">Hi. I'm Quang-Tri<span class="blinking-cursor">|</span></p>
     </div>
@@ -68,7 +49,7 @@
     </div>
   </div>
 
-  <div class="container work-experience">
+  <div class="container work-experience section scrollspy" id="work-experience">
     <div class="center-wrap">
       <h2>Work Experience</h2>
     </div>
@@ -120,7 +101,7 @@
       </div>
   </div>
 
-  <div class="outer-container">
+  <div class="outer-container section scrollspy" id="side-projects">
     <div class="container side-projects">
       <div class="center-wrap">
         <h2>Projects</h2>
@@ -209,6 +190,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- Ionic Framework -->
   <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
+  <!-- Materialize JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <!-- Latest compiled JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
